--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ border: 3px solid #b8860b;  border-radius: 15px;
 }
 
 .btn-outline-primary:hover {
-  background-color: #c79d54;
+  background-color: #0d6efd;
   color: white;
 }
 
