--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -165,7 +165,7 @@
 .testimonial-title {
   font-size: 2.5rem;
   margin-bottom: 2rem;
-  color: #333;
+  color: #8e44ad;
 }
 
 .testimonial-slider {
